// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test OrderAverageReviewTime should match snapshot 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          reportStatistics.orderAverageReviewTime.title
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="statistics-value-style"
      >
        <span />
      </div>
    </div>
  </div>
</div>
`;

exports[`test OrderAverageReviewTime should match snapshot 2`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          reportStatistics.orderAverageReviewTime.title
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="statistics-value-style"
      >
        <span>
          1h54min
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`test OrderAverageReviewTime should match snapshot when request goes wrong 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          reportStatistics.orderAverageReviewTime.title
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <span
        class="ant-typography ant-typography-danger"
      >
        error
      </span>
    </div>
  </div>
</div>
`;
